--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 <div id="weather" class="hidden"><span></span><span></span></div>
 <div class="weatherRing noClick">Location / Weather / Temperature / Bigbrother watching you /</div>
 <div id="codeRoom" class="hidden"><a href="quiz.html">Room</a></div>
+
+<div class="readme"><a href="Readme.html"><i class="fa-solid fa-book"></i></a></div>
   
 <script src="clue.js"></script>
   <script src="index.js"></script>
