--- a/Readme.html
+++ b/Readme.html
@@ -17,7 +17,7 @@
     그리고 그 원을 클릭하면 값이 없어지고 처음 화면이 나타납니다. 일종의 홈버튼 입니다. <br>
     가장 안쪽부터 시간, todo리스트, 명언(숨겨진 퀴즈), 날씨 및 위치 순으로 배열되어 있습니다. <br>
     <br><br>
-    3번째 링인 퀴즈는 2가지 단서와 퀴즈 질문이 랜덤으로 드러납니다. 그 퀴즈 질문과 단서를 보고 3번링을 누르면 나타나는 input에 알맞은 정답을 넣어주시면 버튼이 하나 생깁니다. 
+    3번째 링인 퀴즈는 2가지 단서와 퀴즈 질문이 새로고침 할때마다 랜덤으로 드러납니다. 그 퀴즈 질문과 단서를 보고 3번링을 누르면 나타나는 input에 알맞은 정답을 넣어주시면 버튼이 하나 생깁니다. 
     그 버튼을 누르면 이 장난감이 끝나게 됩니다. <br><br>
 
     3번째 링 힌트 = 12지신, Browser
